--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <main>
             <section></section>
-            <section></section>
+            <section class="events"></section>
             <section></section>
         </main>
 
