--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" type="image/x-icon" href="Color logo with background.ico">
         <title>MALTECH HIGH SCHOOL</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -12,20 +14,22 @@
                 <div>
                     <img src="logo.png" alt="logo">
                 </div>
-                <div class="nav">
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About Us</a>
-                    <a href="admissions.html">Admissions</a>
-                    <a href="studentlife.html">On Campus</a>
-                    <a href="contact.html">Contact Us</a>
+                <div>
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About Us</a>
+                        <a href="admissions.html">Admissions</a>
+                        <a href="studentlife.html">On Campus</a>
+                        <a href="contact.html">Contact Us</a>
+                    </nav>
                 </div>
             </div>
         </header>
         
         <main>
-            <section></section>
+            <section class="numbers"></section>
             <section class="events"></section>
-            <section></section>
+            <section class="feedback"></section>
         </main>
 
         <footer>
