--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div class="navbar">
                 <div>
                     <img src="logo.png" alt="logo">
                 </div>
@@ -23,6 +23,11 @@
                         <a href="contact.html">Contact Us</a>
                     </nav>
                 </div>
+            </div>
+            <div class="hero_vid">
+                <video preload="auto">
+                    <source src="back_1.mp4" type="video/mp4">
+                </video> 
             </div>
         </header>
         
