--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <header>
             <div class="navbar">
-                <div>
-                    <img src="logo.png" alt="logo">
+                <div class="logo_img">
+                    <img src="logo2.png" alt="logo">
                 </div>
                 <div>
                     <nav>
@@ -25,9 +25,13 @@
                 </div>
             </div>
             <div class="hero_vid">
-                <video preload="auto">
+                <video autoplay muted loop preload="auto">
                     <source src="back_1.mp4" type="video/mp4">
-                </video> 
+                </video>
+                <div class="hero_text">
+                    <h1>MALTECH HIGH SCHOOL</h1>
+                    <button>Get Your Admission</button>
+                </div>
             </div>
         </header>
         
