Updating and Styling the Main section

--- a/index.html
+++ b/index.html
@@ -36,9 +36,23 @@
         </header>
         
         <main>
-            <section class="numbers"></section>
-            <section class="events"></section>
-            <section class="feedback"></section>
+            <section class="numbers">
+                <span>Rank In The World</span>
+                <span>Awards Won</span>
+                <span>Teacher:Student Ratio</span>
+                <span>Alumni</span>
+            </section>
+            <section class="events">
+                <span>Science Fair</span>
+                <span>Seminar</span>
+                <span>Exhibition</span>
+            </section>
+            <section class="feedback">
+                <span>Parent 1</span>
+                <span>Student</span>
+                <span>Parent 2</span>
+                <span>Alumni</span>
+            </section>
         </main>
 
         <footer>
