Updated First Section

--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
         
         <main>
             <section class="numbers">
-                <span>Rank In The World</span>
-                <span>Awards Won</span>
-                <span>Teacher:Student Ratio</span>
-                <span>Alumni</span>
+                <span class="rank">
+                    <h2>National Ranking</h2>
+                    <div><img src="logo.png"></div>
+                    <div>
+                        <p>#1 in Best Technology Schools</p>
+                        <p>#3 in Best National School</p>
+                    </div>
+                </span>
+                <span>
+                    <h2>Awards Won</h2>
+                    <div>7</div>
+                </span>
+                <span>
+                    <h2>Teacher:Student Ratio</h2>
+                    <div>1:50</div>
+                </span>
+                <span>
+                    <h2>Alumni</h2>
+                    <div>50,000</div>
+                </span>
             </section>
             <section class="events">
                 <span>Science Fair</span>
