Restructuring Numbers' Section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>MALTECH HIGH SCHOOL</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    
     <body>
         <header>
             <div class="navbar">
@@ -38,24 +39,28 @@
         <main>
             <section class="numbers">
                 <span class="rank">
-                    <h2>National Ranking</h2>
-                    <div><img src="logo.png"></div>
-                    <div>
-                        <p>#1 in Best Technology Schools</p>
-                        <p>#3 in Best National School</p>
-                    </div>
+                    <fieldset>
+                        <legend>#1</legend>
+                        <h2>Best School In Technology</h2>
+                        <blockquote>"Best School In India"</blockquote>
+                    </fieldset>
                 </span>
                 <span>
-                    <h2>Awards Won</h2>
-                    <div>7</div>
+                    <fieldset>
+                        <legend>Number of Students</legend>
+                        <h2>#10,000</h2>
+
+                    </fieldset>
                 </span>
                 <span>
-                    <h2>Teacher:Student Ratio</h2>
-                    <div>1:50</div>
+                    <fieldset>
+                        <legend>Teacher: Student Ratio</legend>
+                    </fieldset>
                 </span>
                 <span>
-                    <h2>Alumni</h2>
-                    <div>50,000</div>
+                    <fieldset>
+                        <legend>Alumni</legend>
+                    </fieldset>
                 </span>
             </section>
             <section class="events">
