Pending Numbers Section

--- a/index.html
+++ b/index.html
@@ -39,35 +39,29 @@
         <main>
             <section class="numbers">
                 <span class="rank">
-                    <fieldset>
-                        <legend>#1</legend>
-                        <h2>Best School In Technology</h2>
-                        <blockquote>"Best School In India"</blockquote>
-                    </fieldset>
+                    <div><h1>#1</h1></div>
+                    <div><h2>Best School in Technology</h2></div>
                 </span>
                 <span>
-                    <fieldset>
-                        <legend>Number of Students</legend>
-                        <h2>#10,000</h2>
-
-                    </fieldset>
+                    <div><h1>10 Years</h1></div>
+                    <div><h2>Since 2013</h2></div>
                 </span>
                 <span>
-                    <fieldset>
-                        <legend>Teacher: Student Ratio</legend>
-                    </fieldset>
+                    <div><h1>10,000</h1></div>
+                    <div><h2>Number of Students</h2></div>
                 </span>
                 <span>
-                    <fieldset>
-                        <legend>Alumni</legend>
-                    </fieldset>
+                    <div><h1>$50,000</h1></div>
+                    <div><h2>Given in Scholarship</h2></div>
                 </span>
             </section>
+
             <section class="events">
                 <span>Science Fair</span>
                 <span>Seminar</span>
                 <span>Exhibition</span>
             </section>
+            
             <section class="feedback">
                 <span>Parent 1</span>
                 <span>Student</span>
