--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <body>
         <header>
-            <div class="navbar">
+            <div class="navbar" id="navbar">
                 <div class="logo_img">
                     <img src="Media/Pics/logo2.png" alt="logo">
                 </div>
@@ -120,4 +120,5 @@
         </footer>
         
     </body>
+    <script src="script.js"></script>
 </html>
