Styling .navbar with script

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="navbar" id="navbar">
-                <div class="logo_img">
+                <div class="logo_img" id="logo">
                     <img src="Media/Pics/logo2.png" alt="logo">
                 </div>
                 <div>
@@ -118,7 +118,7 @@
             </div>
             <div>&copy; 2020 MALTECH High School All Rights Reserved</div>
         </footer>
-        
+        <script src="script.js"></script>
     </body>
-    <script src="script.js"></script>
+    
 </html>
