Complete Events and Partial Feedback section

--- a/index.html
+++ b/index.html
@@ -84,10 +84,26 @@
             </section>
             
             <section class="feedback">
-                <span>Parent 1</span>
-                <span>Student</span>
-                <span>Parent 2</span>
-                <span>Alumni</span>
+                <span>
+                    <div class="tag">#Parent</div>
+                    <div class="feed-img"></div>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+                </span>
+                <span>
+                    <div class="tag">#Student</div>
+                    <div class="feed-img"></div>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+                </span>
+                <span>
+                    <div class="tag">#Parent</div>
+                    <div class="feed-img"></div>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+                </span>
+                <span>
+                    <div class="tag">#Alumni</div>
+                    <div class="feed-img"></div>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+                </span>
             </section>
         </main>
 
