Complete Feedback section

--- a/index.html
+++ b/index.html
@@ -86,22 +86,30 @@
             <section class="feedback">
                 <span>
                     <div class="tag">#Parent</div>
-                    <div class="feed-img"></div>
+                    <div class="feed-img">
+                        <img src="Media/Pics/prof female.jpg" alt="parent">
+                    </div>
                     <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
                 </span>
                 <span>
                     <div class="tag">#Student</div>
-                    <div class="feed-img"></div>
+                    <div class="feed-img">
+                        <img src="Media/Pics/prof male.jpg" alt="student">
+                    </div>
                     <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
                 </span>
                 <span>
                     <div class="tag">#Parent</div>
-                    <div class="feed-img"></div>
+                    <div class="feed-img">
+                        <img src="Media/Pics/prof female.jpg" alt="parent">
+                    </div>
                     <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
                 </span>
                 <span>
                     <div class="tag">#Alumni</div>
-                    <div class="feed-img"></div>
+                    <div class="feed-img">
+                        <img src="Media/Pics/prof male.jpg" alt="alumni">
+                    </div>
                     <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
                 </span>
             </section>
