Reviewed Complete Home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="icon" type="image/x-icon" href="Color logo with background.ico">
         <title>MALTECH HIGH SCHOOL</title>
+
         <link rel="stylesheet" href="style.css">
     </head>
     
@@ -136,7 +137,7 @@
             <div>
                 <h2>Subscribe to Our Newsletters</h2>
                 <form>
-                    <input type="email" placeholder="Enter Your Email">
+                    <input type="email" placeholder="Enter Your Email Address">
                     <input type="submit" value="Subscribe">
                 </form>
             </div>
