--- a/index.html
+++ b/index.html
@@ -13,50 +13,41 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
         <!--<link rel="stylesheet" href="style.css">-->
-        <style>
-            img{
-                width: 200px;
-                height: 200px;
-            }
-
-            video{
-                width: 100%;
-                height: 100%;
-            }
-
-            div{
-                margin: 0;
-                padding: 0;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
+        <link rel = "stylesheet" href = "boot-style.css">
     </head>
     
     <body>
         <header class="container-fluid">
-            <div class="row">
-                <div class="navbar" id="navbar">
-                    <div class="col-sm-4">
-                        <div class="logo_img" id="logo">
-                            <img src="Media/Pics/logo2.png" alt="logo">
-                        </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <nav>
-                            <a href="index.html">Home</a>
-                            <a href="about.html">About Us</a>
-                            <a href="admissions.html">Admissions</a>
-                            <a href="studentlife.html">On Campus</a>
-                            <a href="contact.html">Contact Us</a>
-                        </nav>
-                    </div>
-                </div>
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-sm bg-success">
+                    <a class="navbar-brand" id="logo">
+                        <img src="Media/Pics/logo2.png" alt="logo">
+                    </a>
+
+                    <ul class="nav justify-content-end nav-pills">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link href="admissions.html">Admissions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link href="studentlife.html">On Campus</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </nav>    
             </div>
+            
 
             <div class="row">
                 <div class="hero_vid">
-                    <video autoplay muted loop preload="auto">
+                    <video muted loop preload="auto">
                         <source src="Media/Video/back_1.mp4" type="video/mp4">
                     </video>
                     <div class="hero_text">
